Merge branch 'liuwl.platform-service/task-117'